First implementation of accepting CbApps